# imbored

./: .gitignore  CMakeLists.txt  README.md  main.cpp  render_balls.cpp  render_donut.cpp  yagr.cpp
lin_alg/: CMakeLists.txt  coordinate.cpp  coordinate.hpp  transformation.cpp  transformation.hpp
lin_alg/include/: coordinate.hpp  direction.hpp  lin_alg.hpp  rotation.hpp  transformation.hpp
lin_alg/src/: coordinate.cpp  transformation.cpp  vector.cpp
lin_alg/test/: .gitignore  CMakeLists.txt  coordinate.cpp  transformation.cpp  vector.cpp
polynomial/: .gitignore  CMakeLists.txt
polynomial/include/: cubic.hpp  mult.hpp  polynomial.hpp  quadratic.hpp  quartic.hpp
polynomial/src/: cubic.cpp  quadratic.cpp  quartic.cpp
polynomial/test/: .gitignore  CMakeLists.txt  cubic.cpp  main.cpp  quadratic.cpp  quartic.cpp  test.cpp
renderer/: CMakeLists.txt  display.cpp  display.hpp  renderer.cpp  renderer.hpp  shapes.cpp  shapes.hpp  torus.hpp  world.hpp
renderer/include/: checkerboard.hpp  display.hpp  intersection.hpp  light_source.hpp  plane.hpp  ray.hpp  renderer.hpp  shapes.hpp  sphere.hpp  torus.hpp  triangle.hpp  world.hpp
renderer/src/: checkerboard.cpp  display.cpp  intersection.cpp  plane.cpp  shapes.cpp  sphere.cpp  torus.cpp  triangle.cpp  world.cpp
renderer/test/: .gitignore  CMakeLists.txt  intersection.cpp  main.cpp  plane.cpp  shapes.cpp  torus.cpp  triangle.cpp
tensor/: .gitignore  CMakeLists.txt
tensor/include/: matrix.hpp  tensor.hpp
tensor/src/: matrix.cpp  profile_normal_test.cpp  profile_strassens_test.cpp
tensor/test/: .gitignore  CMakeLists.txt  matrix.cpp
test/: CMakeLists.txt  lin_alg.cpp  shapes_test.cpp  test_main.cpp  transformation_test.cpp
